# SmartFarmAI

./: .gitignore  .replit  app.py  create_smartfarm_db.py  database.py  db_utils.py  init_database.py  init_smartfarm_db.py  package.json  pyproject.toml  replit.nix  requirements.txt  start_streamlit.py  streamlit_app.py
.streamlit/: config.toml
api/: index.js
models/: __init__.py  crop_health_model.py  pest_detection_model.py
pages/: __init__.py  crop_recommendation.py  dashboard.py  pest_detection.py  resource_management.py  weather.py
utils/: __init__.py  crop_recommendation.py  data_processing.py  resource_management.py  weather_api.py
